champs non traduits des sorts

--- a/data/spells/conjuration-01-Wu0xFpewMKRK3HG8.htm
+++ b/data/spells/conjuration-01-Wu0xFpewMKRK3HG8.htm
@@ -1,15 +1,14 @@
 Name: Grease
 Nom: Graisse
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Data ------
 AreasizeEN: 4 contiguous 5-foot squares or Targets 1 object of 1 Bulk or less
-AreasizeFR: 
+AreasizeFR: 4 cases contiguës de 1,5 m de côté ou Cible 1 objet d'Encombrement 1 ou inférieur
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: 1 object of Bulk 1 or less
-TargetFR: 
+TargetFR: 1 objet d'Encombrement 1 ou inférieur
 ------ Description (en) ------
 <p>You conjure grease, with effects based on choosing area or target.</p>
 <ul>
