--- a/data/spells/conjuration-05-2w4OpAGihn1JSHFD.htm
+++ b/data/spells/conjuration-05-2w4OpAGihn1JSHFD.htm
@@ -5,7 +5,7 @@ Nom: Tentacules noirs
 
 ------ Data ------
 AreasizeEN: 20-foot burst adjacent to a flat surface
-AreasizeFR: 
+AreasizeFR: explosion de 6 m adjacente à une surface plate
 RangeEN: 120 feet
 RangeFR: 36 m
 ------ Description (en) ------
