--- a/data/spells/necromancy-04-hdzyDrRdHSse88XM.htm
+++ b/data/spells/necromancy-04-hdzyDrRdHSse88XM.htm
@@ -8,7 +8,7 @@ RangeFR: contact
 TargetEN: 1 Large or smaller creature or corpse
 TargetFR: 1 créature ou un cadavre de taille Grande ou inférieure
 PrimaryCheckEN: Occultism (expert)
-PrimaryCheckFR: Occultisme (expert)
+PrimaryCheckFR: Occultisme (expert)Occultisme (expert)
 SecondaryCheckEN: Medicine
 SecondaryCheckFR: Médecine
 ------ Description (en) ------
