--- a/data/spells/conjuration-01-30BBep9U4BDV0EgQ.htm
+++ b/data/spells/conjuration-01-30BBep9U4BDV0EgQ.htm
@@ -5,7 +5,7 @@ Nom: Pacte infernal
 
 ------ Data ------
 PrimaryCheckEN: Religion (expert; you must be a devil)
-PrimaryCheckFR: 
+PrimaryCheckFR: Religion (expert ; vous devez être un diable)
 ------ Description (en) ------
 <p>You make an appeal to a powerful devil, asking it to bind some of its subordinates to your service. If you succeed, the devil sends you its choice of one devil whose level is no more than double <em>infernal pact's</em> level, two devils whose levels are each at least 2 less than double the spell level, or three devils whose levels are each at least 3 less than double the spell level.</p>
 <hr />
