--- a/data/spells/conjuration-01-D8cWhrzcsd43OlIX.htm
+++ b/data/spells/conjuration-01-D8cWhrzcsd43OlIX.htm
@@ -5,7 +5,7 @@ Nom: Pacte des Divs
 
 ------ Data ------
 PrimaryCheckEN: Religion (expert; you must be a div)
-PrimaryCheckFR: 
+PrimaryCheckFR: Religion (expert ; vous devez être un div)
 ------ Description (en) ------
 <p>You call upon the powers of Abaddon to grant you the assistance of a div. You call upon a div whose level can be no more than double <em>div pact’s </em>spell level, two divs whose levels are each at least 2 less than double the spell level, or three divs whose levels are each at least 3 less than double the spell level.</p>
 <hr />
