--- a/data/spells/conjuration-01-Vpohy4XH1DaH95hT.htm
+++ b/data/spells/conjuration-01-Vpohy4XH1DaH95hT.htm
@@ -1,11 +1,10 @@
 Name: Daemonic Pact
 Nom: Pacte daémoniaque
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Data ------
 PrimaryCheckEN: Religion (expert; you must be a daemon or an urdefhan)
-PrimaryCheckFR: 
+PrimaryCheckFR: Religion (expert; vous devez être un daémon ou un urdefhan)
 ------ Description (en) ------
 <p>You call upon the powers of Abaddon to grant you the assistance of a daemon. You call upon a daemon whose level can be no more than double <em>daemonic pact's</em> spell level, two daemons whose levels are each at least 2 less than double the spell level, or three daemons whose levels are each at least 3 less than double the spell level.</p>
 <hr />
