--- a/data/spells/conjuration-01-dDt8VFuLuhznT19v.htm
+++ b/data/spells/conjuration-01-dDt8VFuLuhznT19v.htm
@@ -1,13 +1,12 @@
 Name: Snare Hopping
 Nom: Piège artisanal bondissant
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Data ------
 RangeEN: 10 feet
 RangeFR: 3 m
 TargetEN: one snare you built
-TargetFR: 
+TargetFR: un piège artisanal que vous avez construit
 ------ Description (en) ------
 <p>You may not have placed your snare in the right place, but you can magically move it there. You teleport the target snare to another unoccupied location in range.</p>
 <hr />
