--- a/data/spells/conjuration-01-joEruBVz31Uxczzq.htm
+++ b/data/spells/conjuration-01-joEruBVz31Uxczzq.htm
@@ -1,11 +1,10 @@
 Name: Angelic Messenger
 Nom: Messager angélique
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Data ------
 PrimaryCheckEN: Religion (expert; you must be an angel)
-PrimaryCheckFR: 
+PrimaryCheckFR: Religion (expert, vous devez être un ange)
 ------ Description (en) ------
 <p>You transport yourself to either a celestial plane or a world on the Material Plane where worshippers of your patron can be found. You must be of no higher level than double <em>angelic messenger's</em> spell level</p>
 <hr />
