--- a/data/spells/conjuration-01-tWzxuJdbXqvskdIo.htm
+++ b/data/spells/conjuration-01-tWzxuJdbXqvskdIo.htm
@@ -1,13 +1,12 @@
 Name: Augment Summoning
 Nom: Convocation améliorée
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Data ------
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: 1 creature you summoned
-TargetFR: 
+TargetFR: 1 créature que vous avez convoquée
 ------ Description (en) ------
 <p>You augment the abilities of a summoned creature. The target gains a +1 status bonus to all checks (this also applies to the creature's DCs, including its AC) for the duration of its summoning, up to 1 minute.</p>
 <p>@Compendium[pf2e.spell-effects.UtIOWubq7akdHMOh]{Spell Effect: Augment Summoning}</p>
