--- a/data/spells/conjuration-01-tsKnoBuBbKMXkiz5.htm
+++ b/data/spells/conjuration-01-tsKnoBuBbKMXkiz5.htm
@@ -1,11 +1,10 @@
 Name: Abyssal Pact
 Nom: Pacte abyssal
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Data ------
 PrimaryCheckEN: Religion (expert; you must be a demon)
-PrimaryCheckFR: 
+PrimaryCheckFR: Religion (expert, vous devez être un démon)
 ------ Description (en) ------
 <p>You call in a favor from another demon whose level is no more than double <em>Abyssal pact's</em> spell level, two demons whose levels are each at least 2 less than double the spell level, or three demons whose levels are each at least 3 less than double the spell level.</p>
 <hr />
