--- a/data/spells/conjuration-03-AkF4yFcSCdhoULyZ.htm
+++ b/data/spells/conjuration-03-AkF4yFcSCdhoULyZ.htm
@@ -1,19 +1,18 @@
 Name: Awaken Portal
 Nom: Éveiller un portail
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Data ------
 RangeEN: 10 feet
 RangeFR: 3 m
 TargetEN: 1 portal
-TargetFR: 
+TargetFR: 1 portail
 SecondaryCasterEN: up to 5
-SecondaryCasterFR: 
+SecondaryCasterFR: jusqu'à 5
 PrimaryCheckEN: Arcana or Occultism (trained)
-PrimaryCheckFR: 
+PrimaryCheckFR: Arcanes ou Occultisme (qualifié)
 SecondaryCheckEN: Whichever is used for the primary check
-SecondaryCheckFR: 
+SecondaryCheckFR: Celui qui est utilisé pour le test primaire
 ------ Description (en) ------
 <p>You attempt to reactivate a dormant gate, portal, or @Compendium[pf2e.spells-srd.5ZW1w9f4gWlSIuWA]{Teleportation Circle} by infusing it with magical energies. This ritual must be successfully performed twice, once at each location the portal connects. While the teleportation circles and portals found in the Abomination Vaults require no additional cost to awaken, other portals might require rare items or specific materials as a cost for this ritual at the GM’s discretion—some portals might even be so powerful that this ritual cannot awaken them at all.</p>
 <p>The DC required to successfully awaken a portal varies based on the strength and distance between its end points. For the portals found in the Abomination Vaults Adventure Path, the DC varies according to the dungeon level on which it is located. Use the DCs by Spell Level section of Table 10–5 to determine the DC for a portal, using the dungeon level in place of spell level. Thus, activating the portal on the first level of the Abomination Vaults requires a successful DC 15 check, while activating the portal on the fourth level requires a successful DC 23 check.</p>
