--- a/data/spells/conjuration-03-uuoPmbjEtqzWZs0v.htm
+++ b/data/spells/conjuration-03-uuoPmbjEtqzWZs0v.htm
@@ -1,17 +1,16 @@
 Name: Unseen Custodians
 Nom: Domestiques invisibles
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Data ------
 AreasizeEN: 100 feet × 100 feet, up to 20 feet high
-AreasizeFR: 
+AreasizeFR: 30 m × 30 m, jusqu'à 6 m de hauteur
 SecondaryCasterEN: 02
 SecondaryCasterFR: 2
 PrimaryCheckEN: Arcana or Occultism (expert)
-PrimaryCheckFR: 
+PrimaryCheckFR: Arcanes ou Occultisme (expert)
 SecondaryCheckEN: Arcana or Occultism (whichever isn't used for the  primary check), Diplomacy
-SecondaryCheckFR: 
+SecondaryCheckFR: Arcanes ou Occultisme (celui qui n'est pas utilisé pour le test primaire), Diplomatie
 ------ Description (en) ------
 <p>You create a site-bound, long-lasting @Compendium[pf2e.spells-srd.xqmHD8JIjak15lRk]{Unseen Servant} spell effect, forming entities of pure force to carry out basic tasks at a fixed location.</p>
 <hr />
