--- a/data/spells/conjuration-04-Az3PmWnlWSb5ELX9.htm
+++ b/data/spells/conjuration-04-Az3PmWnlWSb5ELX9.htm
@@ -1,11 +1,10 @@
 Name: Abundant Step
 Nom: Pas chassé
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Data ------
 RangeEN: 15 feet or more
-RangeFR: 
+RangeFR: 4,5 m ou plus
 ------ Description (en) ------
 <p>You move so fast you blur across planar boundaries. You teleport up to a distance equal to your Speed within your line of sight.</p>
 ------ Description (fr) ------
