--- a/data/spells/conjuration-04-GzdgM0m7wXKuFSho.htm
+++ b/data/spells/conjuration-04-GzdgM0m7wXKuFSho.htm
@@ -7,7 +7,7 @@ Nom: Corde enchantée
 RangeEN: touch
 RangeFR: contact
 TargetEN: 1 touched piece of rope from 5 to 30 feet long
-TargetFR: 
+TargetFR: 1 partie de corde touchée de 1,5 à 9 m de long
 ------ Description (en) ------
 <p><span>You cause the target rope to rise vertically into the air. Where it ends, an extradimensional space opens, connected to the top of the rope. This space can be reached only by climbing the rope.<br /></span></p>
 <p><span>The entrance to the space can't be seen, and it can be pinpointed only by the presence of the rope. The rope can't be removed or hidden, though it can be detached from the extradimensional space by pulling it with 16,000 pounds of weight, critically succeeding at an Athletics check against the spell's DC, or destroying the rope. The space holds up to eight Medium creatures and their gear. A Large creature counts as two Medium creatures, a Huge creature counts as four Medium creatures, and a Gargantuan creature fills the space on its own.<br /></span></p>
