champs des sorts

--- a/data/spells/abjuration-04-OsrtOeG0TvDNnEFH.htm
+++ b/data/spells/abjuration-04-OsrtOeG0TvDNnEFH.htm
@@ -7,7 +7,7 @@ Nom: Secret bien gardé
 RangeEN: 10 feet
 RangeFR: 3 m
 TargetEN: you and any number of willing allies
-TargetFR: 
+TargetFR: vous et tout nombre d'alliés volontaires
 ------ Description (en) ------
 <p>You ensure a secret remains safe from prying spies.</p>
 <p>Choose one piece of information that at least some of the targets know; you can target a creature only if it remains within range for the full minute during which you Cast the Spell.</p>
