--- a/data/spells/abjuration-04-tYLBjOTvBVn9JtRb.htm
+++ b/data/spells/abjuration-04-tYLBjOTvBVn9JtRb.htm
@@ -1,13 +1,12 @@
 Name: Unity
 Nom: Unité
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Data ------
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: each ally targeted by the triggering spell
-TargetFR: 
+TargetFR: chaque allié ciblé par le sort déclencheur
 ------ Description (en) ------
 <p><strong>Trigger</strong> You and 1 or more allies within range are targeted by a spell or ability that allows a saving throw.</p>
 <hr />
