--- a/data/spells/abjuration-04-y7Tusv3CieZktkkV.htm
+++ b/data/spells/abjuration-04-y7Tusv3CieZktkkV.htm
@@ -1,13 +1,12 @@
 Name: Flame Barrier
 Nom: Barrière de flammes
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Data ------
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: the creature that would take fire damage
-TargetFR: 
+TargetFR: la créature devrait subir des dégâts de feu
 ------ Description (en) ------
 <p><strong>Trigger</strong> An effect would deal fire damage to either you or an ally within range.</p>
 <hr />
