--- a/data/spells/abjuration-06-pZc8ZwtsyWnxUUW0.htm
+++ b/data/spells/abjuration-06-pZc8ZwtsyWnxUUW0.htm
@@ -7,13 +7,13 @@ Nom: Appel primordial
 RangeEN: 100 miles
 RangeFR: 150 km
 TargetEN: 1 animal, beast, fey, fungus, or plant
-TargetFR: 
+TargetFR: 1 animal, bête, fée, champignon ou plante
 SecondaryCasterEN: 04
-SecondaryCasterFR: 
+SecondaryCasterFR: 4
 PrimaryCheckEN: Nature (master)
 PrimaryCheckFR: Nature (maître)
 SecondaryCheckEN: Crafting, Diplomacy, Survival
-SecondaryCheckFR: 
+SecondaryCheckFR: Artisanat, Diplomatie, Survie
 ------ Description (en) ------
 <p><span>This functions as @Compendium[pf2e.spells-srd.vgy00hnqxN9VoeoF]{Planar Ally} except you craft a faerie circle and call an animal, beast, fey, fungus, or plant from within 100 miles.</span></p>
 ------ Description (fr) ------
