--- a/data/spells/abjuration-08-nsQvjNyg4Whw2mek.htm
+++ b/data/spells/abjuration-08-nsQvjNyg4Whw2mek.htm
@@ -7,7 +7,7 @@ Nom: Aura divine
 AreasizeEN: 10-foot emanation
 AreasizeFR: émanation de 3 m
 TargetEN: allies in the area
-TargetFR: 
+TargetFR: alliés dans la zone
 ------ Description (en) ------
 <p>Divine power wards the targets, granting each a +1 status bonus to AC and saves while in the area.</p>
 <p>Choose an alignment your deity has (chaotic, evil, good, or lawful). You can't cast this spell if you don't have a deity or your deity is true neutral. This spell gains the trait of the alignment you chose. The bonuses granted by the spell increase to +2 against attacks by-and effects created by-creatures with an alignment opposite to the spell (lawful if you chose chaotic, evil if you chose good). These bonuses increase to +4 against effects created by such creatures that attempt to impose the @Compendium[pf2e.conditionitems.9qGBRpbX9NEwtAAr]{Controlled} condition on a target of your divine aura, as well as against attacks made by creatures summoned by anything opposite in alignment to your divine aura.</p>
