--- a/data/spells/abjuration-09-BI4iwu3nApyIG0zY.htm
+++ b/data/spells/abjuration-09-BI4iwu3nApyIG0zY.htm
@@ -1,11 +1,10 @@
 Name: Astral Labyrinth
 Nom: Labyrinthe astral
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Data ------
 AreasizeEN: 80-foot burst
-AreasizeFR: 
+AreasizeFR: explosion de 24 m
 RangeEN: 120 feet
 RangeFR: 36 m
 ------ Description (en) ------
