--- a/data/spells/abjuration-10-X0t0gr7S7CeCt2Q5.htm
+++ b/data/spells/abjuration-10-X0t0gr7S7CeCt2Q5.htm
@@ -1,19 +1,18 @@
 Name: Anima Invocation (Modified)
 Nom: Invocation d'anima (Modifiée)
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Data ------
 RangeEN: 10 miles
 RangeFR: 15 km
 TargetEN: Primary and Secondary Casters
-TargetFR: 
+TargetFR: Incantateurs primaire et secondaires
 SecondaryCasterEN: 04
-SecondaryCasterFR: 
+SecondaryCasterFR: 4
 PrimaryCheckEN: Occultism (Legendary)
-PrimaryCheckFR: 
+PrimaryCheckFR: Occultisme (légendaire)
 SecondaryCheckEN: Arcana, Religion
-SecondaryCheckFR: 
+SecondaryCheckFR: Arcanes, Religion
 ------ Description (en) ------
 <p>When casting the modified version of the Anima Invocation, it instead draws upon the latent spiritual energies of sapient creatures within range of the spell without requiring their deaths, then uses this energy to bolster the connection between body and soul among all of the ritual’s casters. This shift from an offensive effect to a defensive one results in a much less dangerous spell that helps to protect against Dahak.</p>
 <hr />
