--- a/data/spells/abjuration-04-qJQADktwD0x8kLAy.htm
+++ b/data/spells/abjuration-04-qJQADktwD0x8kLAy.htm
@@ -1,13 +1,12 @@
 Name: Resilient Sphere
 Nom: Sphère d'isolement
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Data ------
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: 1 Large or smaller creature
-TargetFR: 
+TargetFR: 1 créature de Grande taille ou inférieure
 ------ Description (en) ------
 <p>You create an immobile sphere of force to either trap or protect the target, blocking anything that would pass through the sphere. The sphere has AC 5, Hardness 10, and 40 Hit Points. It's immune to critical hits and precision damage. Disintegrate destroys the sphere instantly. If the target is unwilling, the effects of the sphere depend on the target's Reflex save.</p>
 <hr /><strong>Critical Success</strong> The target disrupts the sphere's integrity, causing it to collapse entirely.
