--- a/data/spells/abjuration-05-bay4AfSu2iIozNNW.htm
+++ b/data/spells/abjuration-05-bay4AfSu2iIozNNW.htm
@@ -7,7 +7,7 @@ Nom: Bannissement
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: 1 creature that isn't on its home plane
-TargetFR: 
+TargetFR: 1 créature qui n'est pas sur son plan d'origine
 ------ Description (en) ------
 <p>You send the target back to its home plane. The target must attempt a Will save. You can spend an extra action while Casting this Spell and add a material component to give the creature a -2 circumstance penalty to its save. The component must be a specially gathered object that is anathema to the creature, and not from a material component pouch. This spell fails if you aren't on your home plane when you cast it.</p>
 <hr />
