--- a/data/spells/abjuration-05-h47yv6j6x1pUtzlr.htm
+++ b/data/spells/abjuration-05-h47yv6j6x1pUtzlr.htm
@@ -1,13 +1,12 @@
 Name: Arcane Countermeasure
 Nom: Contre-mesure arcanique
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Data ------
 RangeEN: 120 feet
 RangeFR: 36 m
 TargetEN: the spell cast by the triggering creature
-TargetFR: 
+TargetFR: le sort lancé par la créature déclencheuse
 ------ Description (en) ------
 <p><strong>Trigger</strong> A creature within range that you can see Casts a Spell.</p>
 <hr />
@@ -17,4 +16,7 @@ TargetFR:
 ------ Description (fr) ------
 <p><strong>Déclencheur</strong> Une créature, à portée et que vous pouvez voir Lance un sort.</p>
 <hr />
-<p>Vous sapez le sort ciblé pour qu’il soit plus facile d’y résister. Vous réduisez de 1 le niveau du sort et les cibles du sort bénéficient d’un bonus de statut de +2 aux jets de sauvegarde, aux tests de compétence, à la CA ou au DD contre lui. Vous ne pouvez pas réduire le niveau du sort en dessous de son minimum. Par exemple, un cône de froid de niveau 5 restera au niveau 5 mais une boule de feu de niveau 5 sera réduit au niveau 4. Les cibles bénéficient toujours de tous les autres avantages de ce sort, même si vous ne réduisez pas son niveau.</p>
+<p>Vous sapez le sort ciblé pour qu’il soit plus facile d’y résister. Vous réduisez de 1 le niveau du sort et les cibles du sort bénéficient d’un bonus de statut de +2 aux jets de sauvegarde, aux tests de compétence, à la CA ou au DD contre lui. Vous ne pouvez pas réduire le niveau du sort en dessous de son minimum.</p>
+<p>Par exemple, un cône de froid de niveau 5 restera au niveau 5 mais une boule de feu de niveau 5 sera réduit au niveau 4.</p>
+<p>Les cibles bénéficient toujours de tous les autres avantages de ce sort, même si vous ne réduisez pas son niveau.</p>
+<p>@Compendium[pf2e.spell-effects.14m4s0FeRSqRlHwL]{Effet de sort : Contre mesures arcaniques}</p>
