--- a/data/spells/abjuration-06-Er9XNUlL0wB0PM36.htm
+++ b/data/spells/abjuration-06-Er9XNUlL0wB0PM36.htm
@@ -1,17 +1,16 @@
 Name: Ward Domain
 Nom: Protection de domaine
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Data ------
 AreasizeEN: 100 feet × 100 feet, up to 50 feet high
-AreasizeFR: 
+AreasizeFR: 30 m × 30 m, jusqu'à 15 m de hauteur
 SecondaryCasterEN: 03
 SecondaryCasterFR: 3
 PrimaryCheckEN: Arcana, Nature, or Occultism (master)
-PrimaryCheckFR: 
+PrimaryCheckFR: Arcanes, Nature ou Occultisme (maître)
 SecondaryCheckEN: Lore (any), Survival, Thievery
-SecondaryCheckFR: 
+SecondaryCheckFR: Connaissances (toute), Survie, Vol
 ------ Description (en) ------
 <p>This ritual has long been used to guard the private sanctums of powerful rulers, spellcasters, and other figures of import. You and the other casters spend the casting time burning incense, anointing doorframes, and drawing lines of powered silver across entryways. The ritual creates the following magical effects within the area; these effects are heightened to the level of ward domain and remain throughout the duration.</p>
 <p>All gates, doors, windows, and similar apertures in the area (if any) are locked, with the effects of @Compendium[pf2e.spells-srd.Azoh0BSoCASrA1lr]{Lock}. In addition, you can obscure up to six doors, doorways, or similar entrances within the area with the effects of @Compendium[pf2e.spells-srd.2oH5IufzdESuYxat]{Illusory Object} to appear as plain walls. @Compendium[pf2e.spells-srd.r784cIz17eWujtQj]{Scrying} spells can't perceive any stimuli from the area, and ward domain attempts to counteract @Compendium[pf2e.spells-srd.69L70wKfGDY66Mk9]{Teleportation} effects into or out of the area, including attempts to summon creatures into the area, using a modifier equal to the ritual's save DC - 10.</p>
