champs non traduits des sorts

--- a/data/spells/transmutation-06-znv4ECL7ZtuiagtA.htm
+++ b/data/spells/transmutation-06-znv4ECL7ZtuiagtA.htm
@@ -7,7 +7,7 @@ Nom: Chair en pierre
 RangeEN: 120 feet
 RangeFR: 36 m
 TargetEN: 1 creature made of flesh
-TargetFR: 
+TargetFR: 1 créature faite de chair
 ------ Description (en) ------
 <p>You try to turn the target's flesh into stone. The target must attempt a Fortitude save.</p>
 <p><strong>Critical Success</strong> The target is unaffected.</p>
