--- a/data/spells/transmutation-06-MMCQsh12TPaDdPbV.htm
+++ b/data/spells/transmutation-06-MMCQsh12TPaDdPbV.htm
@@ -5,7 +5,7 @@ Nom: Force du colosse
 
 ------ Data ------
 MaterialEN: You have a deity
-MaterialFR: 
+MaterialFR: vous avez une divinité
 ------ Description (en) ------
 <p><span>You focus all your divine energy and transform yourself into a Medium battle form, similar to your normal form but armed with powerful divine armaments granted by your deity. While in this form, you gain the statistics and abilities listed below. You have hands in this battle form and can use manipulate actions. You can Dismiss the spell.<br /></span></p>
 <p><span>You gain the following statistics and abilities: </span></p>
