champs non traduits des sorts

--- a/data/spells/abjuration-01-RA7VKcen3p56rVyZ.htm
+++ b/data/spells/abjuration-01-RA7VKcen3p56rVyZ.htm
@@ -1,13 +1,12 @@
 Name: Forbidding Ward
 Nom: Sceau d'interdiction
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Data ------
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: 1 ally and 1 enemy
-TargetFR: 
+TargetFR: 1 allié et 1 ennemi
 ------ Description (en) ------
 <p>You ward an ally against the attacks and hostile spells from the target enemy. The target ally gains a +1 status bonus to Armor Class and saving throws against the target enemy's attacks, spells, and other effects.</p>
 <p>@Compendium[pf2e.spell-effects.ctMxYPGEpstvhW9C]{Spell Effect: Forbidding Ward}</p>
