--- a/data/spells/abjuration-01-TTwOKGqmZeKSyNMH.htm
+++ b/data/spells/abjuration-01-TTwOKGqmZeKSyNMH.htm
@@ -1,13 +1,12 @@
 Name: Feather Fall
 Nom: Feuille morte
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Data ------
 RangeEN: 60 feet
 RangeFR: 18 m 
 TargetEN: 1 falling creature
-TargetFR: 
+TargetFR: 1 créature qui chute
 ------ Description (en) ------
 <p><strong>Trigger</strong> a creature within range is falling</p>
 <hr />
