--- a/data/spells/abjuration-01-k43PIYwuQqjeJ3S3.htm
+++ b/data/spells/abjuration-01-k43PIYwuQqjeJ3S3.htm
@@ -18,6 +18,6 @@ TargetFR: 1 créature
 <p>Vous faites taire la voix de la cible, l’empêchant de révéler d’importants secrets. Cela ne l’empêche pas parler ou de fournir des composants de sort verbaux, mais aucune créature située à plus de 3 mètres ne peut entendre ses murmures sans réussir un test de Perception contre votre DD des sorts, qui pourrait interférer avec des effets audibles ou linguistiques ainsi que de communication. La durée du sort dépend du jet de Vigueur de la cible. Après avoir effectué son jet de sauvegarde, la cible devient temporairement immunisée pendant 24 heures.</p>
 <hr />
 <p><strong>Succès critique</strong> La cible n’est pas affectée.</p>
-<p><b>Succès</b> La durée est de 1 round.</p>
-<p><b>Échec</b> La durée est de 1 minute.</p>
-<p><b>Échec critique</b> La durée est de 10 minutes.</p>
+<p><strong>Succès</strong> La durée est de 1 round.</p>
+<p><strong>Échec</strong> La durée est de 1 minute.</p>
+<p><strong>Échec critique</strong> La durée est de 10 minutes.</p>
