--- a/data/spells/abjuration-01-rMOI8JFJ0nT2mrCF.htm
+++ b/data/spells/abjuration-01-rMOI8JFJ0nT2mrCF.htm
@@ -7,7 +7,7 @@ Nom: Déphasage de familier
 RangeEN: 60 feet
 RangeFR: 18 m 
 TargetEN: your familiar
-TargetFR: 
+TargetFR: votre familier
 ------ Description (en) ------
 <p><strong>Trigger</strong> Your familiar would take damage.</p>
 <hr />
