--- a/data/spells/abjuration-01-xM35hJacTM1BSXUl.htm
+++ b/data/spells/abjuration-01-xM35hJacTM1BSXUl.htm
@@ -1,7 +1,6 @@
 Name: Silver's Refrain
 Nom: Refrain d'argent
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Data ------
 AreasizeEN: 60-foot emanation
