--- a/data/spells/abjuration-02-dZV8nZUKRhGIr6g9.htm
+++ b/data/spells/abjuration-02-dZV8nZUKRhGIr6g9.htm
@@ -9,9 +9,9 @@ RangeFR: 6 m
 SecondaryCasterEN: 02
 SecondaryCasterFR: 2
 PrimaryCheckEN: Nature or Religion (expert)
-PrimaryCheckFR: 
+PrimaryCheckFR: Nature ou Religion (expert)
 SecondaryCheckEN: Primary Check Nature or Religion (expert); Secondary Checks  Diplomacy, Society
-SecondaryCheckFR: 
+SecondaryCheckFR: Diplomatie, Société
 ------ Description (en) ------
 <p>You create a magical bond between two willing creatures, who are secondary casters of the ritual and must share genuine affection for one another. As part of the ritual, both members of the bond receive a ring, amulet, or similar token to symbolize their shared connection. They lose the effects of the ritual when not wearing the token, and the bond is broken if either token is destroyed.</p>
 <p>Creatures benefiting from a successful heartbond ritual can later participate in a heightened version of the ritual without requiring new checks by spending the required time and paying the difference of the two costs. A creature can be under the effects of multiple heartbond rituals at once.</p>
