--- a/data/spells/abjuration-03-IFuEzfmmWyNwVbhY.htm
+++ b/data/spells/abjuration-03-IFuEzfmmWyNwVbhY.htm
@@ -5,7 +5,7 @@ Nom: Passage sûr
 
 ------ Data ------
 AreasizeEN: 10-foot-wide, 10-foot-tall, 60-foot-long section of terrain
-AreasizeFR: 
+AreasizeFR: 3 m de large, 3 m de haut, une section de terrain de 18 m
 RangeEN: touch
 RangeFR: contact
 ------ Description (en) ------
