--- a/data/spells/abjuration-03-VBNevVovTCpn04vL.htm
+++ b/data/spells/abjuration-03-VBNevVovTCpn04vL.htm
@@ -5,7 +5,7 @@ Nom: Révélation de la flamme qui ne vacille pas
 
 ------ Data ------
 MaterialEN: Your previous action was a successful unarmed Strike.
-MaterialFR: 
+MaterialFR: votre précédente action était une Frappe à mains nues réussie
 TargetEN: the creature you hit
 TargetFR: la créature que vous touchez
 ------ Description (en) ------
