--- a/data/spells/abjuration-03-mpGCMTldMVa0pWYs.htm
+++ b/data/spells/abjuration-03-mpGCMTldMVa0pWYs.htm
@@ -1,11 +1,10 @@
 Name: Circle of Protection
 Nom: Cercle de protection
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Data ------
 AreasizeEN: 10-foot emanation centered on the touched creature
-AreasizeFR: 
+AreasizeFR: une émanation de 3 m centrée sur la créature touchée
 RangeEN: touch
 RangeFR: contact
 ------ Description (en) ------
