--- a/data/spells/abjuration-04-7Fd4lxozd11MQ55N.htm
+++ b/data/spells/abjuration-04-7Fd4lxozd11MQ55N.htm
@@ -10,7 +10,7 @@ TargetFR: une autre créature de niveau 8 maximum qui est un fidèle de la même
 SecondaryCasterEN: 1, must be the ritual's target
 SecondaryCasterFR: 1, doit être la cible du rituel
 PrimaryCheckEN: Nature or Religion (expert)
-PrimaryCheckFR: Nature ou Religion (expert)
+PrimaryCheckFR: Nature ou Religion (expert)Nature ou Religion (expert)
 SecondaryCheckEN: Nature or Religion (whichever is used for the primary check)
 SecondaryCheckFR: Nature ou Religion (celle qui est utilisée pour le test primaire)
 ------ Description (en) ------
