--- a/data/spells/transmutation-02-aXoh6OQAL57lgh0a.htm
+++ b/data/spells/transmutation-02-aXoh6OQAL57lgh0a.htm
@@ -5,7 +5,7 @@ Nom: Excavation expéditive
 
 ------ Data ------
 AreasizeEN: cube of dirt 5 feet across or smaller
-AreasizeFR: 
+AreasizeFR: cube de poussière de 1,5 m ou plus petite
 RangeEN: touch
 RangeFR: contact
 ------ Description (en) ------
