--- a/data/spells/transmutation-03-B3eLlbaPxOYHcs1o.htm
+++ b/data/spells/transmutation-03-B3eLlbaPxOYHcs1o.htm
@@ -7,7 +7,7 @@ Nom: Malédiction du temps perdu
 RangeEN: touch
 RangeFR: contact
 TargetEN: 1 Large or smaller object, construct, or living creature
-TargetFR: 
+TargetFR: 1 objet de taille Grande, une créature artificielle ou créature vivante 
 ------ Description (en) ------
 <p>You mimic the process of aging or erosion on the target. The effect depends on whether the target is an object, a construct, or a living creature. Artifacts and objects and constructs made of precious materials, as determined by the GM, are immune.</p>
 <hr />
