--- a/data/spells/transmutation-03-HcIAQZjNXHemoXSU.htm
+++ b/data/spells/transmutation-03-HcIAQZjNXHemoXSU.htm
@@ -5,7 +5,7 @@ Nom: Sable mouvant
 
 ------ Data ------
 AreasizeEN: a horizontal earthen or sandy surface within a 20-foot burst
-AreasizeFR: 
+AreasizeFR: une surface horizontale de terre ou de sable dans une explosion de 6 m
 RangeEN: 30 feet
 RangeFR: 9 m
 ------ Description (en) ------
