--- a/data/spells/transmutation-03-TUbXnR4RAuYzRx1u.htm
+++ b/data/spells/transmutation-03-TUbXnR4RAuYzRx1u.htm
@@ -7,7 +7,7 @@ Nom: Pyrotechnie
 RangeEN: 120 feet
 RangeFR: 36 m
 TargetEN: 1 fire
-TargetFR: 
+TargetFR: 1 feu
 ------ Description (en) ------
 <p><span>You turn a fire into either a burst of blinding fireworks or a thick cloud of choking smoke, chosen when you Cast the Spell. The spell targets one fire source, which is immediately extinguished if it is a non-magical fire the size of a campfire or smaller. If the fire source is a creature, the creature takes 1d6 points of cold damage and is not extinguished. </span></p>
 <ul>
