--- a/data/spells/transmutation-04-0fYE64odlKqISzft.htm
+++ b/data/spells/transmutation-04-0fYE64odlKqISzft.htm
@@ -7,7 +7,7 @@ Nom: Poigne oxydante
 RangeEN: touch
 RangeFR: contact
 TargetEN: 1 metal creature, 1 non-magical metal hazard, or 1 non-magical metal item of up to 1 Bulk
-TargetFR: 
+TargetFR: 1 créature métallique, 1 piège artisanal métallique non magique ou un objet métallique non magique jusqu'à 1 Encombrement
 ------ Description (en) ------
 <p>You cause the target to rapidly rust. This magical rust can affect nonferrous materials, but the target must be all or mostly metal. Skymetals such as adamantine and orichalcum are immune to this rust, and the GM might determine other precious materials are similarly resilient. Ultimately, the GM decides if an object or creature can be targeted with this spell. All damage from this spell ignores Hardness. If the spell causes persistent damage from rust, a creature can attempt to scrape off the rust to assist the target in recovering from the persistent damage (reducing the DC of the flat check to end persistent damage to 10 and granting an immediate flat check). The effect of the spell depends on its target.</p>
 <hr />
