--- a/data/spells/transmutation-04-VuPDHoVEPLbMfCJC.htm
+++ b/data/spells/transmutation-04-VuPDHoVEPLbMfCJC.htm
@@ -7,7 +7,7 @@ Nom: Malédiction bestiale
 RangeEN: touch
 RangeFR: contact
 TargetEN: 1 living humanoid
-TargetFR: 
+TargetFR: 1 humanoïde vivant
 ------ Description (en) ------
 <p>You tap into the target's inner being and curse it to become a bestial version of itself. The effect is based on its Fortitude save.</p>
 <hr />
