--- a/data/spells/transmutation-04-cOwSsSXRsBaXUvlr.htm
+++ b/data/spells/transmutation-04-cOwSsSXRsBaXUvlr.htm
@@ -7,7 +7,7 @@ Nom: Stase
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: 1 creature or up to 1 Bulk of objects
-TargetFR: 
+TargetFR: 1 créature ou jusqi'à 1 Encombrement d'objets
 ------ Description (en) ------
 <p>The flow of time congeals around an object or creature, holding it in place. The target must attempt a Will save (an unattended object automatically critically fails its save).</p>
 <hr />
