--- a/data/spells/transmutation-05-LzfrBDxxPTiuN7uL.htm
+++ b/data/spells/transmutation-05-LzfrBDxxPTiuN7uL.htm
@@ -5,7 +5,7 @@ Nom: Transmutation de la roche et de la boue
 
 ------ Data ------
 AreasizeEN: 2 adjacent 10-foot cubes
-AreasizeFR: 
+AreasizeFR: 2 cubes de 3 m adjacents
 RangeEN: 60 feet
 RangeFR: 18 m 
 ------ Description (en) ------
