--- a/data/spells/transmutation-10-qqQYrXaRJXr7uc4i.htm
+++ b/data/spells/transmutation-10-qqQYrXaRJXr7uc4i.htm
@@ -7,7 +7,7 @@ Nom: Compagnon alpha
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: 1 animal companion in your service
-TargetFR: 
+TargetFR: 1 compagnon animal à vote service
 ------ Description (en) ------
 <p>You focus on the energies of all members of your animal companion's species, transforming your animal companion into its apex battle form. Your animal companion gains the following statistics and abilities while in its apex form.</p>
 <ul>
