--- a/data/spells/abjuration-01-Z7N5IxJCwrAdIgSg.htm
+++ b/data/spells/abjuration-01-Z7N5IxJCwrAdIgSg.htm
@@ -7,7 +7,7 @@ Nom: Rune messagère
 RangeEN: touch
 RangeFR: contact
 TargetEN: 1 flat unattended surface
-TargetFR: 
+TargetFR: 1 surface plate non tenue
 ------ Description (en) ------
 <p><span>You record a message up to 5 minutes long and inscribe a special rune on any flat unattended surface within reach. The nature of the rune's appearance is up to you, but it is visible to everyone and it must be no smaller than 2 inches in diameter. You also specify a trigger that creatures must meet to activate the rune. For the duration of the spell, creatures who meet the criteria of the trigger can touch the rune to hear the recorded message in their head as though you were speaking to them telepathically. You know when someone is listening to the message, but you do not know who is listening to it. You can Dismiss the spell. </span></p>
 ------ Description (fr) ------
