--- a/data/spells/abjuration-01-lY9fOk1qBDDhBT8s.htm
+++ b/data/spells/abjuration-01-lY9fOk1qBDDhBT8s.htm
@@ -1,11 +1,10 @@
 Name: Protective Ward
 Nom: Champ protecteur
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Data ------
 AreasizeEN: 5-foot-radius emanation centered on you
-AreasizeFR: 
+AreasizeFR: émanation de 1,5 m centré sur vous
 ------ Description (en) ------
 <p>You emanate a shimmering aura of protective magic. You and any allies in the area gain a +1 status bonus to AC. Each time you @Compendium[pf2e.actionspf2e.3f5DMFu8fPiqHpRg]{Sustain the Spell}, the emanation's radius increases by 5 feet, to a maximum of 30 feet.</p>
 <p>@Compendium[pf2e.spell-effects.dWbg2gACxMkSnZag]{Spell Effect: Protective Ward}</p>
