--- a/data/spells/abjuration-02-9HpwDN4MYQJnW0LG.htm
+++ b/data/spells/abjuration-02-9HpwDN4MYQJnW0LG.htm
@@ -1,13 +1,12 @@
 Name: Dispel Magic
 Nom: Dissipation de la magie
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Data ------
 RangeEN: 120 feet
 RangeFR: 36 m
 TargetEN: 1 spell effect or unattended magic item
-TargetFR: 
+TargetFR: 1 effet du sort ou un objet magique non tenu
 ------ Description (en) ------
 <p>You unravel the magic behind a spell or effect. Attempt a counteract check against the target. If you successfully counteract a magic item, the item becomes a mundane item of its type for 10 minutes. This doesn't change the item's non-magical properties. If the target is an artifact or similar item, you automatically fail.</p>
 ------ Description (fr) ------
