--- a/data/spells/necromancy-10-IGXGs9PlqUCvODcH.htm
+++ b/data/spells/necromancy-10-IGXGs9PlqUCvODcH.htm
@@ -7,7 +7,7 @@ Nom: Chanson des morts au combat
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: up to 4 dead creatures or up to 4 undead creatures
-TargetFR: 
+TargetFR: jusqu'à 4 créatures mortes ou 4 créatures mortes-vivantes
 ------ Description (en) ------
 <p>You chant a dirge or an elegy that either rouses the dead to action or reminds undead that they should lay to rest.</p>
 <p>If you target dead creatures, the bodies animate and can continue acting as if they were alive. A creature animated in this way has 60 temporary Hit Points. The animated creatures are slowed 1 but can otherwise act normally. Creatures animated with this spell die again once the spell ends.</p>
