--- a/data/spells/transmutation-01-TFitdEOpQC4SzKQQ.htm
+++ b/data/spells/transmutation-01-TFitdEOpQC4SzKQQ.htm
@@ -7,7 +7,7 @@ Nom: Arme magique
 RangeEN: touch
 RangeFR: contact
 TargetEN: 1 weapon that is unattended or wielded by you or a willing ally
-TargetFR: 
+TargetFR: 1 arme qui n'est pas tenue ou que vous ou un allié volontaire maniez
 ------ Description (en) ------
 <p>The weapon glimmers with magic and energy. The target becomes a +1 striking weapon, gaining a +1 item bonus to attack rolls and increasing the number of weapon damage dice to two.</p>
 <p>@Compendium[pf2e.spell-effects.GnWkI3T3LYRlm3X8]{Spell Effect: Magic Weapon}</p>
