--- a/data/spells/transmutation-01-lXxP1ziyf4ozkpmv.htm
+++ b/data/spells/transmutation-01-lXxP1ziyf4ozkpmv.htm
@@ -7,7 +7,7 @@ Nom: Langue bifide
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: A creature within 30 feet fails a Deception or Diplomacy check.
-TargetFR: 
+TargetFR: 1 créature dans les 9 m échoue un test de Duperie ou de Diplomatie
 ------ Description (en) ------
 <p>The deceiving creature's tongue splits like a serpent's tongue. The creature takes 1d8 slashing damage and must attempt a Fortitude save.<br /><br /><strong>Critical Success</strong> The creature is unaffected.<br /><strong>Success</strong> The creature takes half damage.<br /><strong>Failure</strong> The creature takes full damage and is @Compendium[pf2e.conditionitems.e1XGnhKNSQIm5IXg]{Stupefied} 1 for [[/roll 1d4]] rounds.<br /><strong>Critical Failure</strong> As failure, but the creature takes double damage and is @Compendium[pf2e.conditionitems.e1XGnhKNSQIm5IXg]{Stupefied} 2 for [[/roll 1d4]] rounds.</p>
 <hr />
