--- a/data/spells/transmutation-01-s3abwDbTV43pGFFW.htm
+++ b/data/spells/transmutation-01-s3abwDbTV43pGFFW.htm
@@ -7,7 +7,7 @@ Nom: Gourdin magique
 RangeEN: touch
 RangeFR: contact
 TargetEN: 1 non-magical club or staff you hold
-TargetFR: 
+TargetFR: 1 gourdin non magique ou un bâton que vous portez
 ------ Description (en) ------
 <p>The target grows vines and leaves, brimming with primal energy. The target becomes a <em>+1 striking weapon</em> while in your hands, gaining a +1 item bonus to attack rolls and increasing the number of weapon damage dice to two. Additionally, as long as you are on your home plane, attacks you make with the target against aberrations, extraplanar creatures, and undead increase the number of weapon damage dice to three.</p>
 <p>@Compendium[pf2e.spell-effects.deG1dtfuQph03Kkg]{Spell Effect: Shillelagh}</p>
