--- a/data/spells/transmutation-02-J6vNvrUT3b1hx2iA.htm
+++ b/data/spells/transmutation-02-J6vNvrUT3b1hx2iA.htm
@@ -5,7 +5,7 @@ Nom: Enchevêtrement
 
 ------ Data ------
 AreasizeEN: all squares in a 20-foot-radius burst that contain plants
-AreasizeFR: 
+AreasizeFR: toutes les cases dans une explosion de 6 m de rayon qui contient des plantes
 RangeEN: 120 feet
 RangeFR: 36 m
 ------ Description (en) ------
