--- a/data/spells/transmutation-03-AMEu5zzLN7uCX645.htm
+++ b/data/spells/transmutation-03-AMEu5zzLN7uCX645.htm
@@ -7,7 +7,7 @@ Nom: Arme fantomatique
 RangeEN: touch
 RangeFR: contact
 TargetEN: 1 non-magical weapon that is either unattended or wielded by you or a willing ally
-TargetFR: 
+TargetFR: 1 arme non magique qui est soit non tenue ou maniée par vous ou un allié volontaire
 ------ Description (en) ------
 <p>The target weapon becomes translucent and ghostly, and it can affect material and incorporeal creatures and objects. It can be wielded by a corporeal or incorporeal creature and gains the effects of the ghost touch property rune.</p>
 ------ Description (fr) ------
