--- a/data/spells/transmutation-03-KktHf7zIAWOr499h.htm
+++ b/data/spells/transmutation-03-KktHf7zIAWOr499h.htm
@@ -5,7 +5,7 @@ Nom: Roncier du rôdeur
 
 ------ Data ------
 AreasizeEN: all squares that contain plants in a 5-foot burst
-AreasizeFR: 
+AreasizeFR: toutes les cases qui contiennent des plantes dans une explosion de 1,5 m
 RangeEN: 100 feet
 RangeFR: 30 m
 ------ Description (en) ------
