--- a/data/spells/transmutation-04-APTMURAW1N0Wpk4w.htm
+++ b/data/spells/transmutation-04-APTMURAW1N0Wpk4w.htm
@@ -7,7 +7,7 @@ Nom: Métaux précieux
 RangeEN: touch
 RangeFR: contact
 TargetEN: 1 metal weapon, up to 10 pieces of metal or metal-tipped ammunition, 1 suit of metal armor, or up to 1 bulk of metal material (such as coins)
-TargetFR: 
+TargetFR: 1 arme de métal, jusqu'à 10 pièces de métal ou de munitions à bout de métal, 1 armure métallique ou jusqu'à 1 Encombrement de matériau métallique (tels que des pièces)
 ------ Description (en) ------
 <p>Your deity blesses base metals to transform them into precious materials. The target item transforms from its normal metal into cold iron, copper, gold, iron, silver, or steel. An item transmuted in this way deals damage according to its new material. For example, a steel sword transmuted to cold iron would deal additional damage to a creature with a weakness to cold iron. This change is clearly magical and temporary, so the item's monetary value doesn't change; you couldn't transmute copper coins to gold and use those coins to purchase something or as a cost for a spell.</p>
 <hr />
