--- a/data/spells/transmutation-04-McnPlLFvKtQVXNcG.htm
+++ b/data/spells/transmutation-04-McnPlLFvKtQVXNcG.htm
@@ -7,7 +7,7 @@ Nom: Façonnage de la pierre
 RangeEN: touch
 RangeFR: contact
 TargetEN: cube of stone 10 feet across or smaller
-TargetFR: 
+TargetFR: cube de pierre de 3 m de côté ou plus petit
 ------ Description (en) ------
 <p>You shape the stone into a rough shape of your choice. The shaping process is too crude to produce intricate parts, fine details, moving pieces, or the like. Any creatures standing atop the stone when you reshape it must each attempt a Reflex save or Acrobatics check.</p>
 <hr />
