--- a/data/spells/transmutation-04-eb4FXf62NYArTqek.htm
+++ b/data/spells/transmutation-04-eb4FXf62NYArTqek.htm
@@ -7,7 +7,7 @@ Nom: Fioritures artistiques
 RangeEN: 15 feet
 RangeFR: 4,5 m
 TargetEN: 1 item or work of art that fits entirely within the range
-TargetFR: 
+TargetFR: 1 objet ou une œuvre d'art qui tient entièrement dans la portée
 ------ Description (en) ------
 <p>You transform the target to make it match your artisanal and artistic vision. If you have expert proficiency in Crafting, the item grants a +1 item bonus to attack rolls if it's a weapon or skill checks if it's a skill tool. The target is a beautiful and impressive piece for its new quality, but the effect is obviously temporary, so its monetary value doesn't change. When you cast this spell, any previous artistic flourish you had cast ends.</p>
 <hr />
