--- a/data/spells/transmutation-06-NCUXsaj2yFxOVhrK.htm
+++ b/data/spells/transmutation-06-NCUXsaj2yFxOVhrK.htm
@@ -7,7 +7,7 @@ Nom: Création de Maille-peaux
 RangeEN: touch
 RangeFR: contact
 TargetEN: 1 frame covered in the skin of sentient humanoids
-TargetFR: 
+TargetFR: 1 cadre couvert de la peau d'un humanoïde pensant
 SecondaryCasterEN: 01
 SecondaryCasterFR: 1
 PrimaryCheckEN: Religion (expert)
