--- a/data/spells/transmutation-06-Pr1ruNTbzGn3H9w5.htm
+++ b/data/spells/transmutation-06-Pr1ruNTbzGn3H9w5.htm
@@ -7,7 +7,7 @@ Nom: Pierre en chair
 RangeEN: touch
 RangeFR: contact
 TargetEN: petrified creature or human-size stone object
-TargetFR: 
+TargetFR: créature pétrifiée ou objet en pierre de taille humaine
 ------ Description (en) ------
 <p>Manipulating the fundamental particles of matter, you convert stone into flesh and blood. You restore a @Compendium[pf2e.conditionitems.dTwPJuKgBQCMxixg]{Petrified} creature to its normal state or transform a stone object into a mass of inert flesh (without stone's Hardness) in roughly the same shape.</p>
 ------ Description (fr) ------
