--- a/data/spells/transmutation-10-pmP8HhXvvEKP3LqU.htm
+++ b/data/spells/transmutation-10-pmP8HhXvvEKP3LqU.htm
@@ -7,7 +7,7 @@ Nom: Troupeau primitif
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: you and up to 5 willing targets
-TargetFR: 
+TargetFR: vous et jusqu'à 5 cibles volontaires
 ------ Description (en) ------
 <p><span>Summoning the power of the natural world, you transform the targets into a herd of mammoths, and they each assume a Huge battle form. Each target must have enough space to expand into or the spell fails for that target. Each target gains the animal trait. Each target can Dismiss the spell's effects on themself. Each target gains the following while transformed: </span></p>
 <ul>
