état changé sort traduit

--- a/data/actions/9gDMkIfDifh61yLz.htm
+++ b/data/actions/9gDMkIfDifh61yLz.htm
@@ -1,6 +1,6 @@
 Name: Stop
 Nom: S'arrêter
-État: aucune
+État: libre
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are piloting a vehicle in motion.</p>
