--- a/data/pathfinder-bestiary-3/KGiEFgiqiexNBfS3.htm
+++ b/data/pathfinder-bestiary-3/KGiEFgiqiexNBfS3.htm
@@ -1,8 +1,11 @@
 Name: Wihsaak
-Nom: 
-État: aucune
+Nom: Wihsaak (Sahkil)
+État: libre
 
 ------ Description (en) ------
 <p>These gaunt and insectile sahkils torment their foes by focusing on a widespread fear of insects and creeping, crawling vermin.&nbsp;Unlike their more subtle cousins, wihsaaks don't lurk in&nbsp;the periphery and instead directly engage&nbsp;their targets, using their unnerving&nbsp;buzzing to disorient and terrify.&nbsp;</p>
 <p>When encountering multiple foes,&nbsp;wihsaaks attempt to spread fear to everyone before slashing at them with their&nbsp;devastating claws.</p>
 ------ Description (fr) ------
+<p>Ces sahkils décharnés et insectiformes tourmentent leurs ennemis en se concentrant sur une peur généralisée des insectes et de la vermine rampante et insidieuse.</p> 
+<p>Contrairement à leurs cousins plus subtils, les wihsaaks ne se tapissent pas dans la périmètre et engagent au contraire directement leurs cibles, utilisant leur bourdonnement déroutant pour désorienter et terrifier.</p>
+<p>Lorsqu'ils rencontrent plusieurs ennemis, les wihsaaks tentent de semer la peur chez tout le monde avant de les lacérer avec leurs griffes dévastatrices.</p>
