--- a/data/pathfinder-bestiary-3/MJhb44wEqSMWtrfe.htm
+++ b/data/pathfinder-bestiary-3/MJhb44wEqSMWtrfe.htm
@@ -1,7 +1,8 @@
 Name: Angheuvore Flesh-gnawer
-Nom: 
-État: aucune
+Nom: Mange-chair angheuvore (Mortique) 
+État: libre
 
 ------ Description (en) ------
 <p>Angheuvores, or mortic elves, have an insatiable hunger for raw humanoid flesh-though they're reluctant to feed on other elves. Most stalk the streets of human nations, such as Druma, Razmiran, and the River Kingdoms. Impatient and impulsive, they're opportunistic hunters, preying on the wounded and isolated.</p>
 ------ Description (fr) ------
+<p>Les angheuvores, ou elfes mortiques, ont une faim insatiable de chair humanoïde brute - bien qu'ils soient réticents à se nourrir d'autres elfes. La plupart d'entre eux rôdent dans les rues des nations humaines, comme Druma, Razmiran et les royaumes des rivières. Impatients et impulsifs, ce sont des chasseurs opportunistes, s'attaquant aux blessés et aux isolés.</p>
