objets non traduits

--- a/data/equipment/equipment-16-son3QT3YfrBYlWPq.htm
+++ b/data/equipment/equipment-16-son3QT3YfrBYlWPq.htm
@@ -1,6 +1,6 @@
 Name: Headbands of Translocation
 Nom: Bandeau de translocalisation
-État: aucune
+État: libre
 
 ------ Description (en) ------
 <p>These silk headbands always come in pairs and usually feature a prominent symbol of a nation or team. If both wearers Invest their headbands at the same time and think of the same symbol while doing so, both headbands change to display that symbol until they are removed. As long as you both have Invested your headbands, you can Aid each other without taking an action to prepare and when you get a critical failure when attempting to Aid an ally with a paired headband, you get a failure instead.</p>
