--- a/data/equipment/equipment-20-8htAYiRxpAmVn9uK.htm
+++ b/data/equipment/equipment-20-8htAYiRxpAmVn9uK.htm
@@ -1,5 +1,5 @@
 Name: Ring Of Recalcitrant Wishes
-Nom: 
+Nom: Anneau des souhaits récalcitrants
 État: aucune
 
 ------ Description (en) ------
@@ -11,3 +11,10 @@ Nom:
 <hr />
 <p>Once the wish is cast, the Ring of Recalcitrant Wishes has no powers, though it is rumored that the wearer's death in an act of profound self-sacrifice restores the wish to the ring.</p>
 ------ Description (fr) ------
+<p>Cet anneau entrelacé d'or et de cuivre, inscrit de symboles en aklo, est surmonté d'une opale luisante et luminescente qui laisse échapper des filaments d'ombre.</p>
+<hr />
+<p><strong>Activation</strong> <span class="pf2-icon">3</span> sur ordre ;</p>
+<p><strong>Effet</strong> vous tentez de fire lancer à l'anneau un sort arcanique de @Compendium[pf2e.spells-srd.6dDtGIUerazSHIOu]{Souhait}. Toutefois, si l'anneau ne considère pas le souhait comme suffisamment désintéressé, le souhait n'est pas émis et l'anneau ne peut pas être activé pendant 24 heures.</p>
+<p>Vous êtes @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drainé 3}, que l'anneau refuse ou non le Souhait.</p>
+<hr />
+<p>Une fois que le souhait est lancé, l'Anneau des souhaits récalcitrants n'a plus de pouvoirs, bien qu'il existe une rumeur au terme de laquelle la mort du porteur dans un acte d'abnégation profonde permettrait de restaurer le pouvoir de l'anneau d'accorder un souhait.</p>
