--- a/data/spells/abjuration-01-cJq5NarY0eOZN74A.htm
+++ b/data/spells/abjuration-01-cJq5NarY0eOZN74A.htm
@@ -13,4 +13,4 @@ TargetFR: vous et l'allié déclencheur
 ------ Description (fr) ------
 <p><strong>Déclencheur</strong> Un allié dans les 9 mètres est sur le point de tenter un jet de protection contre un effet d'émotion nuisible et vous ne devriez pas autrement avoir à lancer un jet de sauvegarde contre l'effet.</p>
 <hr />
-<p>Vous subissez une partiee de la douleur de votre allié. Vous et votre allié utilisez le résultat d'un degré supérieur au résultat du jet de sauvegarde de votre allié, même si l'effet déclencheur affecte seulement une cible.</p>
+<p>Vous subissez une partie de la douleur de votre allié. Vous et votre allié utilisez le résultat d'un degré supérieur au résultat du jet de sauvegarde de votre allié, même si l'effet déclencheur affecte seulement une cible.</p>
