derniers équipements + sort

--- a/data/equipment/equipment-20-8htAYiRxpAmVn9uK.htm
+++ b/data/equipment/equipment-20-8htAYiRxpAmVn9uK.htm
@@ -1,6 +1,6 @@
 Name: Ring Of Recalcitrant Wishes
 Nom: Anneau des souhaits récalcitrants
-État: aucune
+État: libre
 
 ------ Description (en) ------
 <p>This band of interwoven gold and copper, traced with Aklo symbols, is topped with a gleaming, luminescent opal gently bleeding wisps of shadowstuff.</p>
