--- a/data/equipment/equipment-20-YiitcoNxawdhTO1e.htm
+++ b/data/equipment/equipment-20-YiitcoNxawdhTO1e.htm
@@ -1,6 +1,6 @@
 Name: Void Mirror
 Nom: Miroir du néant
-État: aucune
+État: libre
 
 ------ Description (en) ------
 <p><strong>Usage</strong> Mounted in frame</p>
