--- a/data/equipment/equipment-25-D836jcTlNR4PHgXS.htm
+++ b/data/equipment/equipment-25-D836jcTlNR4PHgXS.htm
@@ -1,6 +1,6 @@
 Name: Radiant Spark
-Nom: 
-État: aucune
+Nom: Étincelle radieuse
+État: libre
 
 ------ Description (en) ------
 <p>This shining prism is bound within a golden frame. The bright glow within the artifact is the gleaming essence of celestials bound within it in ancient times. Each activation consumes a bit of this celestial energy, projecting the screams of the celestials into your mind.</p>
@@ -24,3 +24,23 @@ Nom:
 <hr />
 <p><strong>Destruction</strong> An archfiend or evil demigod must willingly swap their essence with that of a celestial dominated or bound by the artifact, then critically fail the saving throw against having their essence consumed. This permanently destroys both the artifact and the fiend or demigod.</p>
 ------ Description (fr) ------
+<p>Ce prisme brillant est lié à un cadre doré. La lueur vive à l'intérieur de l'artefact est composée de l'essence étincelante des célestes liés en son sein dans des temps antiques. Chaque activation consomme un peu de cette énergie céleste, projetant les cris des célestes dans votre esprit.</p>
+<p>Lorsque vous détenez l'étincelle radieuse, vous obtenez un bonus d'objet de +2 aux jets de sauvegarde contre les sorts et effets divins et vous êtes conscient de ses pouvoirs.</p>
+<p>Si vous êtes d'alignement bon, tant que vous tenez l'Etincelle radieuse, vous êtes @Compendium[pf2e.conditionitems.fesd1n5eVhpCSS18]{Malade 3} et vous ne pouvez pas vous remettre de cet état.</p>
+<hr />
+<p><strong>Activation</strong><span class="pf2-icon">2</span> imaginer, Interaction ;</p>.
+<p><strong>Effet</strong> L'étincelle radieuse lance un jet de @Compendium[pf2e.spells-srd. de 10e niveau. OsOhx3TGIZ7AhD0P]{Domination} (<span data-pf2-saving-throw="will" data-pf2-traits="enchantment,incapacitation,mental" data-pf2-label="DD Domination" data-pf2-dc="49" data-pf2-show-dc="gm">Volonté</span>) sur une créature qui n'est pas originaire du Plan Matériel. Les célestes obtiennent un résultat d'un degré de réussite inférieur au résultat de leur jet de sauvegarde.</p>
+<hr />
+<p><strong>Activation</strong><span class="pf2-icon">f</span> Imaginer ;</p>
+<p><strong>Déclencheur</strong> Vous commencez à lancer un rituel de @Compendium[pf2e.spells-srd.2ykmAVKrsAWcazcC]{Contrat planaire} ;</p>
+</p><strong>Effet</strong> L'étincelle radieuse réduit le temps d'incantation du rituel à 1 heure et vous n'avez pas besoin d'incantateurs secondaires pour ce rituel.</p>
+<hr />
+<p><strong>Activation</strong><span class="pf2-icon">r</span> Imaginer, Interaction ;</p>
+<p><strong>Déclencheur</strong> La cible obtient un échec critique à son jet de sauvegarde contre le sort Domination de l'Étincelle radieuse ou vous réussissez de manière critique à lier la cible avec le rituel de Contrat planaire en utilisant l'artefact </p>
+<p><strong>Effet</strong> La cible doit tenter un jet de <span data-pf2-saving-throw="will" data-pf2-traits="conjuration,occult" data-pf2-label="DD Étincelle radieuse" data-pf2-dc="49" data-pf2-show-dc="gm">Volonté</span> et est immunisée contre toute nouvelle tentative pendant 24 heures.</p>
+<p><strong>Succès critique</strong> La cible n'est pas affectée.</p>
+<p><strong>Succès</strong> La cible est @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drainée 2}.</p>
+<p><strong>Échec</strong> La cible meurt et son essence est piégée dans l'Étincelle radieuse. Elle ne peut être ramenée à la vie qu'avec une magie puissante telle que @Compendium[pf2e.spells-srd.6dDtGIUerazSHIOu]{Souhait} ou @Compendium[pf2e.spells-srd.YfJTXyVGzLhM6V8U]{Miracle}.</p>
+<p><strong>Échec critique</strong> Comme avec un échec mais la cible ne peut pas être ramenée à la vie tant que l'Étincelle radieuse n'est pas détruite.</p>
+<hr />
+<p><strong>Destruction</strong> Un archidémon ou un demi-dieu maléfique doit volontairement échanger son essence avec celle d'un céleste dominé ou lié par l'artefact puis échouer de manière critique au jet de sauvegarde contre la consommation de son essence. Cela détruit définitivement à la fois l'artefact et le démon ou le demi-dieu.</p>
