--- a/data/pathfinder-bestiary-3/nr4E59Xu10nWYsyO.htm
+++ b/data/pathfinder-bestiary-3/nr4E59Xu10nWYsyO.htm
@@ -1,9 +1,12 @@
 Name: Giant Skunk
-Nom: 
-État: aucune
+Nom: Sconse géant
+État: libre
 
 ------ Description (en) ------
 <p>With their distinctive black bodies and white stripes or spots, skunks are instantly recognizable to most creatures. Those who catch a full blast of musk rarely decide to trouble a skunk again, as the revolting stench can linger for hours or even days. Removing the odor is difficult, typically requiring the aid of alchemy or magic.</p>
 <hr />
 <p>Giant skunks thrive in places where their larger size and more potent musk allow them to fend off predators their smaller cousins can't. With larger bodies come more powerful appetites, and giant skunks tend to be aggressive and territorial.</p>
 ------ Description (fr) ------
+<p>Avec leur corps noir distinctif et leurs rayures ou taches blanches, les sconses sont instantanément reconnaissables par la plupart des créatures. Ceux qui attrapent une pleine explosion de musc décident rarement de déranger à nouveau un sconse, car la puanteur révoltante peut persister pendant des heures, voire des jours. L'élimination de l'odeur est difficile, nécessitant généralement l'aide de l'alchimie ou de la magie.</p>
+<hr />
+<p>Les sconses géants prospèrent dans des endroits où leur taille plus importante et leur musc plus puissant leur permettent de repousser les prédateurs que leurs cousins plus petits ne peuvent pas affronter. Avec des corps plus importants viennent des appétits plus grands, et les sconses géants ont tendance à être agressifs et territoriaux.</p>
