--- a/data/feats/ancestry-01-1r514EjD9YrZJ5rk.htm
+++ b/data/feats/ancestry-01-1r514EjD9YrZJ5rk.htm
@@ -1,9 +1,8 @@
 Name: Android Lore
-Nom: Connaissance androïde
+Nom: Connaissance des androïdes
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You have a keen interest in the origins of your people.
@@ -16,4 +15,6 @@ Avantage: Vous avez un intérêt marqué pour les origines de votre peuple.
 <hr />
 <p><em>Note: If you are already trained in the skill provided by this feat, you need to manually select an alternative skill. You also need to manually enter the granted Lore skill.</em></p>
 ------ Description (fr) ------
-<p>Vous avez un intérêt aiguisé dans les origines de votre peuple. Vous obtenez le rang qualifié en Artisanat et en Vol. Si vous devriez automatiquement être qualifié en une de ces compétences (du fait de votre historique ou de votre classe, par exemple), vous devenez qualifié à la place dans une compétence de votre choix. Vous devenez qualifié en Connaissance androïde.</p>
+<p>Vous avez un intérêt aiguisé pour les origines de votre peuple. Vous êtes qualifié en Artisanat et en Vol. Si vous êtes automatiquement qualifié dans l'une de ces compétences (du fait de votre historique ou de votre classe, par exemple), vous devenez qualifié à la place dans une compétence de votre choix. Vous devenez qualifié en Connaissance des androïdes.</p>
+<hr />
+<p><em>Note: Si vous êtes déjà qualifié dans la compétence procurée par ce don, vous avez besoin de choisir manuellement une compétence alternative. Vous avez également besoin de rentrer manuellement la compétence de connaissance accordée.</em></p>
