--- a/data/backgrounds/yK40c3082U30BUX5.htm
+++ b/data/backgrounds/yK40c3082U30BUX5.htm
@@ -1,7 +1,6 @@
 Name: Grand Council Bureaucrat
 Nom: Bureaucrate du Grand Conseil
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p><strong>Prerequisite</strong>: Region - Absalom and Starstone Isle</p>
