boons & curses changées

--- a/data/boons-and-curses/DuGA57MDiwEKp7Y1.htm
+++ b/data/boons-and-curses/DuGA57MDiwEKp7Y1.htm
@@ -1,7 +1,6 @@
 Name: Sarenrae - Major Curse
 Nom: Sarenrae - Malédiction majeure
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p><strong>Major Curse</strong>: Sarenrae restricts your ability to harm others.</p>
