--- a/data/boons-and-curses/dL6r0VfFIWlAazDW.htm
+++ b/data/boons-and-curses/dL6r0VfFIWlAazDW.htm
@@ -1,7 +1,6 @@
 Name: Sarenrae - Major Boon
 Nom: Sarenrae - Bénédiction majeure
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p><strong>Major Boon</strong>: You are a voice of peace and rehabilitation.</p>
